<resources>
    <string name="app_name">Sephora</string>
    <string name="app_image">App image</string>
    <string name="description">Description</string>
    <string name="function">Function:</string>
    <string name="skin_type">Skin Type:</string>
    <string name="finish">Finish:</string>
    <string name="formulation">Formulation:</string>
    <string name="what_it_is">What it is</string>
    <string name="what_it_does">What it does</string>
</resources>